--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "firebase": "^9.9.2",
+    "node-sass": "^7.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.54.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
