--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -17,9 +17,12 @@
     "sass": "^1.54.3"
   },
   "devDependencies": {
+    "@cypress/react": "^6.2.0",
+    "@cypress/vite-dev-server": "^3.1.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "cypress": "^10.7.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
